<resources>
    <string name="name">Calculator</string>
    <string name="_0">0</string>
    <string name="c">ac</string>
    <string name="per">%</string>
    <string name="div">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="point">.</string>
    <string name="equal_to">=</string>
    <string name="_00">00</string>
    <string name="area">Area</string>
    <string name="data">Data</string>
    <string name="date">Date</string>
    <string name="discount">Discount</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>
    <string name="numeral_system">Numeral System</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="volume">Volume</string>
    <string name="down_arrow">▼</string>
    <string name="plus_minus">+ / -</string>
    <string name="F">F</string>
    <string name="E">E</string>
    <string name="D">D</string>
    <string name="C">C</string>
    <string name="B">B</string>
    <string name="A">A</string>
    <string name="original_price">Original price</string>
    <string name="discount_off">Discount off</string>
    <string name="final_price">Final price</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>