<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/button_background"
            android:text="@string/_7"
            android:textSize="35sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_background"
            android:text="@string/_8"
            android:textSize="35sp" />

        <Button
            android:id="@+id/nine"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_background"
            android:text="@string/_9"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/button_background"
            android:text="@string/_4"
            android:textSize="35sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_background"
            android:text="@string/_5"
            android:textSize="35sp" />

        <Button
            android:id="@+id/six"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_background"
            android:text="@string/_6"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/button_background"
            android:text="@string/_1"
            android:textSize="35sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_background"
            android:text="@string/_2"
            android:textSize="35sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_background"
            android:text="@string/_3"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/double_zero"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_background"
            android:text="@string/_00"
            android:textSize="35sp" />

        <Button
            android:id="@+id/zero"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_background"
            android:text="@string/_0"
            android:textSize="35sp" />

        <Button
            android:id="@+id/dot"
            android:layout_width="86dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_background"
            android:text="@string/point"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>