<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculations">
    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="30dp"
        android:paddingBottom="5dp"
        android:scrollHorizontally="false"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="12"
        android:paddingStart="15dp"
        android:paddingEnd="30dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/remove_all"
                android:layout_width="86dp"
                android:layout_height="78dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/button_background"
                android:text="@string/c"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/remove"
                android:layout_width="86dp"
                android:layout_height="78dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/button_background"
                android:drawableStart="@drawable/remove_logo"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/orange"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/per"
                android:layout_width="86dp"
                android:layout_height="78dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/button_background"
                android:text="@string/per"
                android:textColor="@color/orange"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/div"
                android:layout_width="86dp"
                android:layout_height="80dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/button_background"
                android:text="@string/div"
                android:textColor="@color/orange"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/number_pad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/multi"
                    android:layout_width="86dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_background"
                    android:text="@string/multiply"
                    android:textColor="@color/orange"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/min"
                    android:layout_width="86dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_background"
                    android:text="@string/minus"
                    android:textColor="@color/orange"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/plus"
                    android:layout_width="86dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_background"
                    android:text="@string/add"
                    android:textColor="@color/orange"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/equal_to"
                    android:layout_width="86dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_background_extra"
                    android:text="@string/equal_to"
                    android:textColor="#FDFDFD"
                    android:textSize="40sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>